--- a/angular4/anhLe/src/styles.css
+++ b/angular4/anhLe/src/styles.css
@@ -29,7 +29,7 @@ body {
 	background-color: #F5F5F5;
 	color: white;
 	font-family: 'Lato', sans-serif;
-
+	padding-top: 20px;
 }
 
 body > .container {
